# fipe

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  coverage.toml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: main.yml  publish.yml
fipe/: __init__.py  env.py  fipe.py  mip.py  oracle.py  parsers.py  typing.py
fipe/ensemble/: __init__.py  base.py  binder.py  builder.py  container.py  ensemble.py  generic.py  parser.py
fipe/ensemble/binders/: __init__.py  ab.py  binder.py  boost.py  callback.py  cl.py  gb.py  generic.py  lgbm.py  rf.py  skl.py  sklearn.py  xgb.py
fipe/ensemble/classes/: __init__.py  ab.py  cl.py  gb.py  lgbm.py  rf.py  skl.py  xgb.py
fipe/ensemble/parsers/: generic.py  lgbm.py  parser.py  skl.py  xgb.py
fipe/feature/: __init__.py  container.py  encoder.py  types.py  variables.py
fipe/feature/variables/: __init__.py  binary.py  categorical.py  continuous.py  feature.py
fipe/flow/: __init__.py  variables.py
fipe/lgbm/: __init__.py  fipe.py  oracle.py  parsers.py  typing.py
fipe/lgbm/ensemble/: container.py  ensemble.py
fipe/lgbm/flow/: variables.py
fipe/lgbm/ocean/: base.py  ocean.py  vote.py
fipe/lgbm/prune/: __init__.py  base.py  pruner.py
fipe/lgbm/tree/: __init__.py  tree.py
fipe/ocean/: __init__.py  base.py  ocean.py  parsers.py  vote.py
fipe/prune/: __init__.py  base.py  pruner.py
fipe/tree/: __init__.py  base.py  classifier.py  container.py  parser.py  regressor.py  tree.py
fipe/tree/classes/: cl.py  gb.py  lgbm.py  skl.py  xgb.py
fipe/tree/parsers/: __init__.py  generic.py  lgbm.py  skl.py  xgb.py
tests/: test_features.py  test_fipe.py  test_lgbm_fipe.py  test_lgbm_oracle.py  test_lgbm_predict.py  test_oracle.py  test_predict.py  test_pruner.py  utils.py
tests/datasets-for-tests/COMPAS-ProPublica/: COMPAS-ProPublica.full.csv
tests/datasets-for-tests/FICO/: FICO.full.csv
tests/datasets-for-tests/Pima-Diabetes/: Pima-Diabetes.full.csv
tests/datasets-for-tests/Seeds/: Seeds.full.csv
tests/datasets-for-tests/Spambase/: Spambase.featurelist.csv  Spambase.full.csv
